[gd_scene load_steps=11 format=3 uid="uid://dib81kjkapo7c"]

[ext_resource type="Script" uid="uid://clb3lm8lmb7de" path="res://Enemies/red_slime.gd" id="1_umj5r"]
[ext_resource type="Texture2D" uid="uid://b7ip8tte4w5l8" path="res://Enemies/Bat_flying1.png" id="2_m77bt"]
[ext_resource type="Texture2D" uid="uid://c3pxnticbd5yv" path="res://Enemies/Bat_flying2.png" id="3_ap5ux"]
[ext_resource type="Texture2D" uid="uid://cijlbcdmyyfso" path="res://Enemies/Bat_flying3.png" id="4_yq153"]
[ext_resource type="Texture2D" uid="uid://kw8ntdko6hhu" path="res://Enemies/Bat_flying4.png" id="5_t0yl1"]
[ext_resource type="Texture2D" uid="uid://cutsubrdyufn7" path="res://Enemies/Bat_flying5.png" id="6_7abjc"]
[ext_resource type="Texture2D" uid="uid://b5ux1djof3uim" path="res://Enemies/Bat_flying6.png" id="7_ugiml"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ap5ux"]
radius = 5.9996014
height = 15.998928

[sub_resource type="SpriteFrames" id="SpriteFrames_nu2n0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m77bt")
}, {
"duration": 1.0,
"texture": ExtResource("3_ap5ux")
}, {
"duration": 1.0,
"texture": ExtResource("4_yq153")
}, {
"duration": 1.0,
"texture": ExtResource("5_t0yl1")
}, {
"duration": 1.0,
"texture": ExtResource("6_7abjc")
}, {
"duration": 1.0,
"texture": ExtResource("7_ugiml")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m77bt"]
radius = 7.9999886
height = 19.999968

[node name="Bat" type="CharacterBody2D" groups=["mobs"]]
collision_mask = 30
script = ExtResource("1_umj5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["mobs"]]
position = Vector2(0, -21.000004)
rotation = 1.5823721
shape = SubResource("CapsuleShape2D_ap5ux")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["mobs"]]
position = Vector2(0, -21)
sprite_frames = SubResource("SpriteFrames_nu2n0")
autoplay = "default"
frame = 4
frame_progress = 0.8643992

[node name="Hitbox" type="Area2D" parent="." groups=["mobs"]]
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=["mobs"]]
position = Vector2(-3.7252903e-09, -21.000002)
rotation = 1.5726001
shape = SubResource("CapsuleShape2D_m77bt")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 1.0
path_max_distance = 10.0

[node name="KnockTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="KnockTimer" to="." method="_on_knock_timer_timeout"]
